time-android/intermediate/x86/Debug/jpeg/nord_jpeg.log
  ANDROID_HOME=C:\\Microsoft\AndroidSDK\25
  ANT_HOME=C:\Program Files\Microsoft Visual Studio\2022\Community\Apps\apache-ant-1.9.3
  JAVA_HOME=C:\Program Files\Android\jdk\jdk-8.0.302.8-hotspot\jdk8u302-b08
  NDK_ROOT=C:\archive\android-ndk-r23b
  jaricom.c
  jccoefct.c
  jcarith.c
  jccolor.c
  jcapistd.c
  In file included from jcarith.c:17:
  In file included from C:\basis\source\third\jpeg\/jinclude.h:20:
  In file included from jccoefct.c:15:
  In file included from C:\basis\source\third\jpeg\/jinclude.h:20:
C:\basis\source\third\jpeg\/jconfig.h(21,10): fatal error : 'platform/third_private_config.h' file not found
  #include "platform/third_private_config.h"
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\basis\source\third\jpeg\/jconfig.h(21,10): fatal error : 'platform/third_private_config.h' file not found
  #include "platform/third_private_config.h"
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  In file included from jaricom.c:17:
  In file included from C:\basis\source\third\jpeg\/jinclude.h:20:
C:\basis\source\third\jpeg\/jconfig.h(21,10): fatal error : 'platform/third_private_config.h' file not found
  #include "platform/third_private_config.h"
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  In file included from jccolor.c:13:
  In file included from C:\basis\source\third\jpeg\/jinclude.h:20:
C:\basis\source\third\jpeg\/jconfig.h(21,10): fatal error : 'platform/third_private_config.h' file not found
  #include "platform/third_private_config.h"
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  1 error generated.
  1 error generated.
  1 error generated.
  jcapimin.c
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.Cpp.Clang.targets(131,5): error MSB6006: "clang.exe" exited with code -1073741510.
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.Cpp.Clang.targets(131,5): error MSB6006: "clang.exe" exited with code -1073741502.
